[package]
name = "iro"
version = "0.0.1"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"
description = "Conversion between color spaces."
license = "MIT"
repository = "https://github.com/TianyiShi2001/iro"
tags = ["color", "image", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
min-max = "0.1"

[dev-dependencies]
test-case = "1.0"